Update portfolio: add landing gear 3D model, update title and hero text, update education and interests

--- a/projects.html
+++ b/projects.html
@@ -65,8 +65,8 @@
                             <h3>3D Model</h3>
                             <p class="model-instructions">Click and drag to rotate, scroll to zoom, right-click and drag to pan</p>
                             <model-viewer
-                                src="models/your-model-1.glb"
-                                alt="3D Model of Project 1"
+                                src="models/LandingGearmodel.gltf"
+                                alt="Landing Gear 3D Model"
                                 camera-controls
                                 auto-rotate
                                 ar
@@ -77,7 +77,6 @@
                                     <p>Loading 3D model...</p>
                                 </div>
                             </model-viewer>
-                            <p class="model-note">Replace "your-model-1.glb" with your actual 3D model file (glTF or GLB format)</p>
                         </div>
                     </div>
                 </article>
