--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mechanical Engineering Portfolio - Showcasing innovative engineering projects and designs">
-    <title>Mechanical Engineering Portfolio</title>
+    <title>Chris Bou Saada l Mechanical</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.3.0/model-viewer.min.js"></script>
 </head>
@@ -32,7 +32,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1 class="hero-title">Mechanical Engineering Portfolio</h1>
+            <h1 class="hero-title">Building the future, one design at a time</h1>
             <p class="hero-subtitle">Innovative Designs & Engineering Solutions</p>
             <a href="projects.html" class="btn btn-primary">View My Work</a>
         </div>
